<resources>
    <string name="app_name">Самовдосконалення</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Самовдосконалення</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_articles">Статті</string>
    <string name="menu_diary">Щоденник</string>
    <string name="menu_planner">Планер справ</string>
    <string name="menu_notes">Нотатки</string>
    <string name="menu_settings">Налаштування</string>
    <string name="title_activity_articles">Статті</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="textview">TextView</string>
    <string name="title_activity_diary">Щоденник</string>
    <string name="title_activity_planner">Планер справ</string>
    <string name="title_activity_notes">Нотатки</string>
    <string name="title_activity_settings">Налаштування</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="add_new_note">Додати нову замітку</string>
    <string name="add_new_event">Додати нову справу</string>
    <string name="search">Пошук</string>
    <string name="daily">День</string>
    <string name="weekly">Неділя</string>
    <string name="monthly">Місяць</string>
    <string name="month_and_year">Місяць та рік</string>
    <string name="emotions">Емоції</string>
    <string name="diary_entry">Відмітка</string>
    <string name="rating">Рейтинг</string>

    <string name="day">День</string>
    <string name="monday">Пон</string>
    <string name="tuesday">Вівт</string>
    <string name="wednesday">Сер</string>
    <string name="thursday">Четв</string>
    <string name="friday">П\'ятн</string>
    <string name="saturday">Суб</string>
    <string name="sunday">Нед</string>
    
    <string name="dummyText">Якщо ви не знайдете час, щоб попрацювати над створенням того життя, якого ви хочете, ви зрештою будете змушені приділяти багато часу справам з життям, яке вам не хочеться», - Кевін Нго</string>

</resources>