<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Planner.DailyViewActivity"
    tools:showIn="@layout/app_bar_daily_calendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="monthlyAction"
            android:text="@string/monthly"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1."
            android:background="@null"
            android:onClick="searchAction"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="weeklyAction"
            android:text="@string/weekly"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/black"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="previousDayAction"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/monthDayText"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/month_and_year"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forward"
            android:textColor="@color/black"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="nextDayAction"
            android:textSize="20sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dayOfWeekTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:layout_marginBottom="20dp"
        android:textColor="@color/teal_200"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_event"
        android:textColor="@color/black"
        android:background="@null"
        android:textStyle="bold"
        android:id="@+id/newEvent"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventDaysListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>